--- a/src/app/pages/mainpage/mainpage.component.html
+++ b/src/app/pages/mainpage/mainpage.component.html
@@ -1,3 +1,7 @@
+<video [muted]="'muted'" [autoplay]="'autoplay'" loop id="videoBackground">
+  <source src="assets/vid/animatedSplashArt.mp4" type="video/mp4">
+</video>
+<audio id="backgroundAudio" src="assets/aud/Aphelios_Champion_Theme.mp3" [autoplay]="'autoplay'" [volume]="0.025" [loop]="'loop'"></audio>
 <div class="main-content">
     <div class="centralize">
         <h1 class="page-title main-title">
