HTML & CSS Corrections for better looking

--- a/src/app/pages/kayn/kayn.component.html
+++ b/src/app/pages/kayn/kayn.component.html
@@ -12,8 +12,8 @@
     <p id="loreShadow">
       Atentado pelo poder de uma arma Darkin, kayn toma o controle de Rhaast.
       Para a surpresa da Ordem das Sombras, Kayn não vira um darkin, assim
-      derrotando e absorvendo todo o poder de Rhaast, assim se tornando o
-      assassino das sombras.<br />
+      derrotando e absorvendo todo o poder de Rhaast,tornando-se o assassino das
+      sombras.<br />
       Será que ele provará seu valor?
     </p>
     <button class="cta">
@@ -26,11 +26,10 @@
   <div class="" id="darkinContent">
     <h1 class="titleShadow">Rhaast, o Darkin</h1>
     <p id="loreShadow">
-      Atentado pelo poder de uma arma Darkin, Kayn decide tomar posse de uma
-      foice amaldiçoada pelo darkin Rhaast. Porém Rhaast derrota Kayn e toma
-      posse de seu corpo, assim, o corrompendo. Agora Rhaast junta-se a Aatrox,
-      Varus e Naafiri pela sede de sangue dos Mortais de Runeterra Será que ele
-      provará seu valor?
+      Atentado pelo poder de uma arma Darkin, Kayn decide tomar posse da foice
+      darkin Rhaast. Porém Rhaast derrota Kayn e toma posse de seu corpo, assim,
+      o corrompendo. Agora Rhaast junta-se a Aatrox, Varus e Naafiri pela sede
+      de sangue dos Mortais de Runeterra.
     </p>
     <button class="cta">
       <h1 class="hover-underline-animation">Leia Mais</h1>
