--- a/src/app/pages/introduction/introduction.component.html
+++ b/src/app/pages/introduction/introduction.component.html
@@ -2,8 +2,8 @@
   <div class="hideOverflow" id="header"></div>
   <ul class="image-list">
     <li class="selection-images" id="camilleDiv">
-      <div id="Camille">
-        <img class="Champions" src="assets/img/ArcanaCamille.jpg" />
+      <div id="Camille" (click)="animationCamille()">
+        <img class="Champions" id="camille" src="assets/img/ArcanaCamille.jpg" />
         <img id="TopLane" class="icons" src="assets/img/TopLane.png" />
       </div>
     </li>
@@ -14,7 +14,7 @@
       </div>
     </li>
     <li class="selection-images" id="zedDiv">
-      <div>
+      <div (click)="animationZed()">
         <img id="zed" class="Champions" src="assets/img/GalaxySlayerZed.jpg" />
         <img id="midIcon" class="icons" src="assets/img/MiddleIcon.png" />
       </div>
@@ -26,7 +26,7 @@
       </div>
     </li>
     <li class="selection-images" id="leonaDiv">
-      <div>
+      <div (click)="animationLeona()">
         <img
           id="leona"
           class="Champions"
