--- a/src/app/pages/mainpage/mainpage.component.css
+++ b/src/app/pages/mainpage/mainpage.component.css
@@ -4,10 +4,32 @@
 }
 
 .page-title,
-.title-complement {
+.title-complement, #regionText {
   text-transform: uppercase;
   justify-content: center;
   text-align: center;
+}
+
+#regionText {
+  color: #c28f2c;
+  justify-content: center;
+  font-size: 24pt;
+  text-decoration: none;
+}
+
+#regionInfo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* #regionIcon{
+  width: 2vw;
+  height: 2vw;
+} */
+
+#regionIcon {
+  margin-top: 0.1%;
 }
 
 .page-title {
