Added more animations

--- a/src/app/pages/kayn/kayn.component.html
+++ b/src/app/pages/kayn/kayn.component.html
@@ -17,7 +17,9 @@
       Será que ele provará seu valor?
     </p>
     <button class="cta">
-      <h1 class="hover-underline-animation" (click)="scrollToStory()">Leia Mais</h1>
+      <h1 class="hover-underline-animation" (click)="scrollToStory()">
+        Leia Mais
+      </h1>
     </button>
     <button class="cta" id="sairButton">
       <h1 class="hover-underline-animation" (click)="exitSelection()">Sair</h1>
@@ -32,7 +34,9 @@
       de sangue dos Mortais de Runeterra.
     </p>
     <button class="cta">
-      <h1 class="hover-underline-animation" (click)="scrollToStory()">Leia Mais</h1>
+      <h1 class="hover-underline-animation" (click)="scrollToStory()">
+        Leia Mais
+      </h1>
     </button>
     <button class="cta" id="sairButton">
       <h1 class="hover-underline-animation" (click)="exitSelection()">Sair</h1>
@@ -55,6 +59,14 @@
   <div class="centralize">
     <h1 class="page-title main-title" id="championName">Kayn</h1>
     <h2 class="title-complement" id="championTitle">O ceifador das sombras</h2>
+    <h3 class="title-complement" id="regionInfo">
+      <img id="regionIcon" src="assets/img/ioniaIcon.png" /><a
+        href="https://universe.leagueoflegends.com/pt_BR/region/ionia"
+        target="_blank"
+        id="regionText"
+        >Ionia</a
+      >
+    </h3>
   </div>
 </div>
 <div class="lore">
