--- a/src/app/pages/leona/leona.component.html
+++ b/src/app/pages/leona/leona.component.html
@@ -5,5 +5,13 @@
   <div class="centralize">
     <h1 class="page-title main-title" id="championName">Leona</h1>
     <h2 class="title-complement" id="championTitle">A Alvorada Radiante</h2>
+    <h3 class="title-complement" id="regionInfo">
+      <img id="regionIcon" src="assets/img/targonIcon.png" /><a
+        href="https://universe.leagueoflegends.com/pt_BR/region/mount-targon"
+        target="_blank"
+        id="regionText"
+        >Targon</a
+      >
+    </h3>
   </div>
 </div>
