--- a/src/app/pages/zed/zed.component.html
+++ b/src/app/pages/zed/zed.component.html
@@ -1,1 +1,22 @@
-<p>zed works!</p>
+<video
+  [muted]="'muted'"
+  [autoplay]="'autoplay'"
+  [loop]="'loop'"
+  id="videoBackground"
+>
+  <source src="assets/vid/galaxySlayerZed.mp4" type="video/mp4" />
+</video>
+<div class="main-content">
+  <div class="centralize">
+    <h1 class="page-title main-title" id="championName">Zed</h1>
+    <h2 class="title-complement" id="championTitle">O Mestre Das Sombras</h2>
+    <h3 class="title-complement" id="regionInfo">
+      <img id="regionIcon" src="assets/img/ioniaIcon.png" /><a
+        href="https://universe.leagueoflegends.com/pt_BR/region/ionia"
+        target="_blank"
+        id="regionText"
+        >Ionia</a
+      >
+    </h3>
+  </div>
+</div>
