Created stats table
All infos about the champions are taken from League of Graphs
*Every stats taken from League of Graphs (Partner of RIOT)*

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/md-dark-indigo/theme.css";
+@import "primeng/resources/primeng.css";
+
 @font-face {
     font-family: Beaufort-for-LOL-italic;
     src: url(./assets/fonts/BeaufortforLOL-HeavyItalic.ttf);
